--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     containerregistrytype: 'Azure Container Registry'
     azureSubscription: 'DemoUserPro - Azure'
     azureContainerRegistry: '{"loginServer":"dockeruserdemo.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/demouserpro-rg/providers/Microsoft.ContainerRegistry/registries/dockerUserDemo"}'
-    dockerComposeFile: '**/docker-compose.yml'
+    dockerComposeFile: '**/Dockerfile'
     action: 'Build services'
     additionalImageTags: '$(Build.BuildNumber)'
     includeLatestTag: true
