--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,3 +20,12 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: DockerCompose@0
+  inputs:
+    containerregistrytype: 'Azure Container Registry'
+    azureSubscription: 'Free Trial(d74e399a-93c6-483d-b3e3-7942987f850d)'
+    azureContainerRegistry: '{"loginServer":"localregistry.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/azuredevopspro-rg/providers/Microsoft.ContainerRegistry/registries/LocalRegistry"}'
+    dockerComposeFile: '**/docker-compose.yml'
+    action: 'Build services'
+    additionalImageTags: '$(Build.BuildNumber)'
+    includeLatestTag: true
