--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -24,5 +24,5 @@ steps:
 - task: DockerCompose@0
   inputs:
     containerregistrytype: 'Azure Container Registry'
-    dockerComposeFile: '**/docker-compose.yml'
+    dockerComposeFile: '/Dockerfile'
     action: 'Build services'
