--- a/azure-pipelines-5.yml
+++ b/azure-pipelines-5.yml
@@ -16,6 +16,6 @@ steps:
 - task: Docker@2
   displayName: Build an image
   inputs:
-    repository: $(imageName)
+    repository: userDemoImage
     command: build
     Dockerfile: Dockerfile
