Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
 - task: Docker@2
   displayName: Build an image
   inputs:
-    repository: 'awsdemo'
+    repository: 'pandutatikonda'
     command: 'build'
     Dockerfile: 'Dockerfile'
     ContainerRegistry: 'panduDockerReg'
