--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -24,5 +24,7 @@ steps:
 - task: DockerCompose@0
   inputs:
     containerregistrytype: 'Azure Container Registry'
-    dockerComposeFile: '/Dockerfile'
+    azureSubscription: 'Free Trial(1)(d74e399a-93c6-483d-b3e3-7942987f850d)'
+    azureContainerRegistry: '{"loginServer":"dockeruserdemo.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/demouserpro-rg/providers/Microsoft.ContainerRegistry/registries/dockerUserDemo"}'
+    dockerComposeFile: 'docker-compose.yml'
     action: 'Build services'
