Update azure-pipelines-3.yml for Azure Pipelines

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -20,12 +20,12 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-- task: DockerCompose@0
+
+
+- task: Docker@2
   inputs:
-    containerregistrytype: 'Azure Container Registry'
-    azureSubscription: 'Free Trial(d74e399a-93c6-483d-b3e3-7942987f850d)'
-    azureContainerRegistry: '{"loginServer":"dockeruserdemo.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/demouserpro-rg/providers/Microsoft.ContainerRegistry/registries/dockerUserDemo"}'
-    dockerComposeFile: 'docker-compose.yml'
-    action: 'Build services'
-
-
+    containerRegistry: 'DockerAzureRegistry'
+    repository: 'dockerUserDemo'
+    command: 'buildAndPush'
+    Dockerfile: 'Dockerfile'
+    buildContext: 
