--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,9 +20,10 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-- task: Docker@2
+- task: DockerCompose@0
   inputs:
-    containerRegistry: 'DockerAzureRegistry'
-    repository: 'dockerUserDemo'
-    command: 'buildAndPush'
-    Dockerfile: 'Dockerfile'
+    containerregistrytype: 'Azure Container Registry'
+    azureSubscription: 'Free Trial(1)(d74e399a-93c6-483d-b3e3-7942987f850d)'
+    azureContainerRegistry: '{"loginServer":"dockeruserdemo.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/demouserpro-rg/providers/Microsoft.ContainerRegistry/registries/dockerUserDemo"}'
+    dockerComposeFile: 'docker-compose.yml'
+    action: 'Build services'
