--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,7 +23,7 @@ steps:
 - task: DockerCompose@0
   inputs:
     containerregistrytype: 'Azure Container Registry'
-    azureSubscription: 'Free Trial(1)(d74e399a-93c6-483d-b3e3-7942987f850d)'
+    azureSubscription: 'Free Trial(d74e399a-93c6-483d-b3e3-7942987f850d)'
     azureContainerRegistry: '{"loginServer":"dockeruserdemo.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/demouserpro-rg/providers/Microsoft.ContainerRegistry/registries/dockerUserDemo"}'
     dockerComposeFile: 'docker-compose.yml'
     action: 'Build services'
