Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,14 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 
+- task: DockerCompose@0
+  inputs:
+    containerregistrytype: 'Azure Container Registry'
+    azureSubscription: 'DevOpsDemo-Boeing - Azure'
+    azureContainerRegistry: '{"loginServer":"devopsdemoboeingacr.azurecr.io", "id" : "/subscriptions/d74e399a-93c6-483d-b3e3-7942987f850d/resourceGroups/DevOpsDemo-Boeing-rg/providers/Microsoft.ContainerRegistry/registries/DevOpsDemoBoeingacr"}'
+    dockerComposeFile: 'docker-compose.yml'
+    action: 'Build services'
+
 
 
 
