--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
 - task: DockerCompose@0
   inputs:
     containerregistrytype: 'Azure Container Registry'
-    azureSubscription: 'AzureConnection'
+    azureSubscription: 'Free Trial(9fbf3040-61af-4df0-b41d-4a34667d3240)'
     azureContainerRegistry: '{"loginServer":"azuretcscontainer.azurecr.io", "id" : "/subscriptions/9fbf3040-61af-4df0-b41d-4a34667d3240/resourceGroups/azuretcsteam/providers/Microsoft.ContainerRegistry/registries/azuretcsContainer"}'
-    dockerComposeFile: '**/docker-compose.yml'
+    dockerComposeFile: 'docker-compose.yml'
     action: 'Build services'
