--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: awsdemo:latest
+      image: awsdemo:latest
+      ports:
+            - "8081:8080"
+            - "8444:8443"
