--- a/UserLogin/src/main/webapp/WEB-INF/web.xml
+++ b/UserLogin/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
 		<servlet-name>spring-mvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
+		 <init-param>
+    			<param-name>contextConfigLocation</param-name>
+    			<param-value>/WEB-INF/spring-mvc-servlet.xml</param-value>
+		 </init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>spring-mvc</servlet-name>
